[workspace]
resolver = "2"
members = [
    'api',
    'cli',
    'lib',
    'lib-interface',
    'rpc',
    'rpc-client',
    'program',
    'program-macro',
]

[workspace.dependencies]
solana-clap-utils = "=1.18.18"
solana-cli = "=1.18.18"
solana-cli-config = "=1.18.18"
solana-client = "=1.18.18"
solana-account-decoder = "=1.18.18"
solana-program = { version = "=1.18.18", default-features = false }
solana-sdk = "=1.18.18"
solana-program-runtime = "=1.18.18"
solana-runtime = { version = "=1.18.18", features = ["dev-context-only-utils"] }
solana-accounts-db = "=1.18.18"
solana-bpf-loader-program = "=1.18.18"
solana-loader-v4-program = "=1.18.18"
solana-transaction-status = "=1.18.18"

[profile.test]
debug = true
