[workspace]
resolver = "2"
members = [
    'api',
    'cli',
    'lib',
    'lib-interface',
    'rpc',
    'rpc-client',
    'program',
    'program-macro',
]

[workspace.dependencies]
solana-clap-utils = "=1.17.34"
solana-cli = "=1.17.34"
solana-cli-config = "=1.17.34"
solana-client = "=1.17.34"
solana-account-decoder = "=1.17.34"
solana-program = { version = "=1.17.34", default-features = false }
solana-sdk = "=1.17.34"
solana-program-runtime = "=1.17.34"
solana-runtime = "=1.17.34"
solana-accounts-db = "=1.17.34"

[profile.test]
debug = true
