[workspace]
resolver = "2"
members = [
    'api',
    'cli',
    'lib',
    'lib-interface',
    'rpc',
    'rpc-client',
    'program',
    'program-macro',
]

[workspace.dependencies]
solana-clap-utils = { git = "https://github.com/openlab-openos/openos" ,package="solana-clap-utils" }
solana-cli = { git = "https://github.com/openlab-openos/openos" ,package="solana-cli" }
solana-cli-config = { git = "https://github.com/openlab-openos/openos" ,package="solana-cli-config" }
solana-client = { git = "https://github.com/openlab-openos/openos" ,package="solana-client" }
solana-account-decoder =  { git = "https://github.com/openlab-openos/openos" ,package="solana-account-decoder" }
solana-program = { git = "https://github.com/openlab-openos/openos" ,package="solana-program", default-features = false }
solana-sdk = { git = "https://github.com/openlab-openos/openos" ,package="solana-sdk" }
solana-program-runtime = { git = "https://github.com/openlab-openos/openos" ,package="solana-program-runtime" }
solana-runtime =  { git = "https://github.com/openlab-openos/openos" ,package="solana-runtime" }
solana-accounts-db =  { git = "https://github.com/openlab-openos/openos" ,package="solana-accounts-db" }

[profile.test]
debug = true
