[package]
name = "neon-lib"
version = "1.17.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3.3"
hyper = "0.14"
evm-loader = { path = "../program", default-features = false, features = ["log", "async-trait"] }
jsonrpsee = { version = "0.20", features = ["server", "ws-client", "macros"] }
solana-sdk.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
solana-cli-config.workspace = true
solana-cli.workspace = true
solana-program-runtime.workspace = true
solana-runtime.workspace = true
solana-accounts-db.workspace = true
solana-bpf-loader-program.workspace = true
solana-loader-v4-program.workspace = true
solana-transaction-status.workspace = true
spl-token = { version = "~4.0", default-features = false, features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~2.3", default-features = false, features = ["no-entrypoint"] }
bs58 = "0.5.1"
base64 = "0.22"
hex = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = { version = "3.9", features = ["hex"] }
log = "0.4.22"
rand = "0.8"
ethnum = { version = "1.5", default-features = false, features = ["serde"] }
goblin = { version = "0.8.2" }
scroll = "0.12.0"
tokio = { version = "1", features = ["full"] }
clickhouse = "0.12.0"
tracing = "0.1"
async-trait = "0.1.81"
build-info = "0.0.37"
enum_dispatch = "0.3.13"
web3 = "0.19.0"
neon-lib-interface = { path = "../lib-interface" }
abi_stable = "0.11.3"
async-ffi = { version = "0.5.0", features = ["abi_stable"] }
strum = "0.26.3"
strum_macros = "0.26.4"
clap = "2.34.0"
lazy_static = "1.5.0"
elsa = "1.10.0"
arrayref = "0.3.8"
futures = "0.3.30"

[dev-dependencies]
hex-literal = "0.4.1"

[build-dependencies]
build-info-build = "0.0.37"

[lib]
crate-type = ["cdylib", "lib"]
