[package]
name = "neon-lib"
version = "1.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3.1"
hyper = "0.14"
evm-loader = { path = "../program", default-features = false, features = ["log", "async-trait"] }
solana-sdk.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
solana-cli-config.workspace = true
solana-cli.workspace = true
solana-program-runtime.workspace = true
solana-runtime.workspace = true
solana-accounts-db.workspace = true
spl-token = { version = "~4.0", default-features = false, features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~2.3", default-features = false, features = ["no-entrypoint"] }
bs58 = "0.5.1"
base64 = "0.22"
hex = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = { version = "3.8", features = ["hex"] }
log = "0.4.21"
rand = "0.8"
ethnum = { version = "1.5", default-features = false, features = ["serde"] }
goblin = { version = "0.6.0" }
scroll = "0.11.0"
tokio = { version = "1", features = ["full"] }
clickhouse = "0.11.6"
tracing = "0.1"
async-trait = "0.1.80"
build-info = { version = "0.0.31", features = ["serde"] }
enum_dispatch = "0.3.13"
web3 = "0.19.0"
neon-lib-interface = { path = "../lib-interface" }
abi_stable = "0.11.2"
async-ffi = { version = "0.5.0", features = ["abi_stable"] }
strum = "0.26.2"
strum_macros = "0.26.2"
clap = "2.33.3"
lazy_static = "1.4.0"
elsa = "1.10.0"
arrayref = "0.3.6"

[dev-dependencies]
hex-literal = "0.4.1"

[build-dependencies]
build-info-build = "0.0.31"

[lib]
crate-type = ["cdylib", "lib"]
