[package]
name = "neon-rpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.204"
serde_json = "1.0.121"
neon-lib = { path = "../lib" }
thiserror = "1.0.63"
async-trait = "0.1.81"
jsonrpsee-core = "0.22.5"
jsonrpsee-http-client = "0.22.5"
jsonrpsee-types = "0.22.5"
tokio = { version = "1", features = ["full"] }
build-info = "0.0.37"

[build-dependencies]
build-info-build = "0.0.37"
