[package]
name = "neon-rpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.203"
serde_json = "1.0.117"
neon-lib = { path = "../lib" }
thiserror = "1.0.61"
async-trait = "0.1.80"
jsonrpsee-core = "0.22.3"
jsonrpsee-http-client = "0.22.3"
jsonrpsee-types = "0.22.3"
tokio = { version = "1", features = ["full"] }
build-info = { version = "0.0.31", features = ["serde"] }
