[package]
name = "neon-rpc"
version = "1.17.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
clap = "2.34.0"
jsonrpc-v2 = "0.13.0"
neon-lib-interface = { path = "../lib-interface" }
neon-lib = { path = "../lib" }
semver = "1.0.23"
serde = "1.0.204"
serde_json = "1.0.121"
tokio = { version = "1", features = ["full"] }
build-info = "0.0.37"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"

[build-dependencies]
build-info-build = "0.0.37"
