[package]
name = "neon-rpc"
version = "1.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
clap = "2.33.3"
jsonrpc-v2 = "0.13.0"
neon-lib-interface = { path = "../lib-interface" }
neon-lib = { path = "../lib" }
semver = "1.0.23"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
build-info = { version = "0.0.31", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"

[build-dependencies]
build-info-build = "0.0.31"
